@startuml Diagrama ER - Domótica (Layout Horizontal)
'--- Título e Estilo ---
title Diagrama de Entidade e Relacionamento (DER) - Domótica
skinparam {
    Style strictuml
    ClassBorderColor #007bff
    ArrowColor #343a40
    DefaultFontName "Segoe UI"
    shadowing false
}

' --- Diretiva para Layout ---
left to right direction

' --- Entidades ---
entity "users" as users {
  + id : INTEGER (PK)
  --
  name : VARCHAR
  age : INTEGER
}

entity "rooms" as rooms {
  + id : INTEGER (PK)
  --
  name : VARCHAR
}

entity "devices" as devices {
  + id : INTEGER (PK)
  --
  name : VARCHAR
  active : BOOLEAN
  # room_id : INTEGER (FK)
}

entity "scenes" as scenes {
  + id : INTEGER (PK)
  --
  name : VARCHAR
  code_active : VARCHAR
  active : BOOLEAN
  # room_id : INTEGER (FK)
}

' --- Tabela de Associação ---
entity "scene_devices" as scene_devices {
  # scene_id : INTEGER (FK)
  # device_id : INTEGER (FK)
}

' --- Forçar Quebra de Linha no Layout ---
users -[hidden]down- scenes

' --- Relacionamentos e Cardinalidade ---
rooms "1" ||--o{ "0..*" devices
rooms "1" ||--o{ "0..*" scenes

scenes "1" }o--|| "0..*" scene_devices
devices "1" }o--|| "0..*" scene_devices

@enduml